bug of main slide on index html solved removing overflow style on team class

--- a/css/main.css
+++ b/css/main.css
@@ -536,8 +536,7 @@ button:hover,
 
 .intro_section,
 .team {
-  position: relative;
-  overflow: hidden;
+  position: relative;  
 }
 
 .intro_section > img
